styles for workshop 1

--- a/style.css
+++ b/style.css
@@ -10,3 +10,50 @@ body {
 }
 
 /* Add styles here! */
+
+main {
+  background-color: hsl(0deg, 0%, 60%);
+  border-top: 5px solid hsl(0deg, 0%, 30%);
+}
+
+.max-width-wrapper {
+  margin: 64px auto;
+  padding-bottom: 64px;
+  max-width: 600px;
+}
+
+header > .max-width-wrapper {
+  padding: 0;
+}
+
+.card {
+  background-color: white;
+  border-bottom: 5px solid hsl(0deg, 0%, 30%);
+  padding: 8px 16px 0px 16px;
+  min-width: 100px;
+}
+
+.indented-heading {
+  background-color: hsl(45deg, 100%, 50%);
+  width: fit-content;
+  padding: 8px 24px;
+  border-bottom: 5px solid hsl(45deg, 100%, 40%);
+  margin: 0px 0px 0px -24px;
+  font-size: 1rem;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+header {
+  padding: 0px 16px; 
+}
+
+.intro-chunk {
+  max-width: 325px;
+}
+
+h1 {
+  padding-bottom: 16px;
+}
